--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
+
 <!DOCTYPE html>
+<title>SeafoodStudios</title> 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html lang="en">
 <html>
