--- a/index.html
+++ b/index.html
@@ -1,30 +1,78 @@
-
 <!DOCTYPE html>
-<title>SeafoodStudios</title> 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html lang="en">
-<html>
 <head>
-<style>
-body {
-  font-family: 'garamond', monospace;
-}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SeafoodStudios</title>
+  <style>
+    body {
+      font-family: 'Garamond', monospace;
+      text-align: center;
+      background-color: #f4f4f9;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+    h1 {
+      font-size: 3em;
+      margin-top: 50px;
+      color: #2a9df4;
+    }
+    p {
+      font-size: 1.5em;
+      margin: 20px 0;
+      color: #555;
+    }
+    a {
+      display: inline-block;
+      margin: 10px 0;
+      padding: 12px 20px;
+      background-color: #2a9df4;
+      color: white;
+      text-decoration: none;
+      font-size: 1.2em;
+      border-radius: 8px;
+      transition: background-color 0.3s ease, transform 0.3s ease;
+    }
+    a:hover {
+      background-color: #1a7a9b;
+      transform: scale(1.05);
+    }
+    a:active {
+      transform: scale(0.98);
+    }
+    .link-container {
+      margin-top: 30px;
+    }
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 2.5em;
+      }
+      p {
+        font-size: 1.2em;
+      }
+      a {
+        font-size: 1.1em;
+        padding: 10px 18px;
+      }
+    }
+  </style>
 </head>
 <body>
-<font size="4">
-<h1>SeafoodStudios</h1>
-<p>Welcome to SeafoodStudios Games!</p>
-<a href="https://cloudroom.seafoodstudios.com" title="Cloudroom">Cloudroom</a>
-<br>
-<a href="https://lightswitch.seafoodstudios.com" title="Light Switch Simulator">Light Switch Simulator</a>
-<br>
-<a href="https://prankinator.seafoodstudios.com" title="Prankinator">Prankinator</a>
-<br>
-<a href="https://alchemy.seafoodstudios.com" title="Sigma Alchemy">Sigma Alchemy</a>
-<br>
-<br>
-<a href="https://github.com/SeafoodStudios" title="Github">GitHub</a>
-<br>
-<a href="https://updates.seafoodstudios.com" title="Updates">Updates</a>
-<br>
+  <h1>SeafoodStudios</h1>
+  <p>Welcome to SeafoodStudios Games! Explore our interactive and fun experiences below:</p>
+  <div class="link-container">
+    <a href="https://cloudroom.seafoodstudios.com" title="Cloudroom">Cloudroom</a>
+    <a href="https://lightswitch.seafoodstudios.com" title="Light Switch Simulator">Light Switch Simulator</a>
+    <a href="https://prankinator.seafoodstudios.com" title="Prankinator">Prankinator</a>
+    <a href="https://alchemy.seafoodstudios.com" title="Sigma Alchemy">Sigma Alchemy</a>
+  </div>
+  <div class="link-container">
+    <a href="https://github.com/SeafoodStudios" title="GitHub">GitHub</a>
+    <a href="https://updates.seafoodstudios.com" title="Updates">Updates</a>
+  </div>
+  <footer>
+    <p>© 2024 SeafoodStudios. All rights reserved.</p>
+  </footer>
+</body>
+</html>
