--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <a href="https://lightswitch.seafoodstudios.com" title="Light Switch Simulator">Light Switch Simulator</a>
     <a href="https://prankinator.seafoodstudios.com" title="Prankinator">Prankinator</a>
     <a href="https://alchemy.seafoodstudios.com" title="Sigma Alchemy">Sigma Alchemy</a>
+    <a href="https://alchemy.seafoodstudios.com" title="Sigma Alchemy">Salmon WebView</a>
   </div>
   <div class="link-container">
     <a href="https://github.com/SeafoodStudios" title="GitHub">GitHub</a>
