--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <a href="https://prankinator.seafoodstudios.com" title="Prankinator">Prankinator</a>
     <a href="https://alchemy.seafoodstudios.com" title="Sigma Alchemy">Sigma Alchemy</a>
     <a href="https://salmon.seafoodstudios.com" title="Salmon WebView">Salmon WebView</a>
-    <a href="https://www.sfs.bz" title="SFS.BZ Free Subdomains">SFS.BZ Free Subdomains</a>
+    <a href="https://sfs.bz" title="SFS.BZ Free Subdomains">SFS.BZ Free Subdomains</a>
   </div>
   <div class="link-container">
     <a href="https://github.com/SeafoodStudios" title="GitHub">GitHub</a>
