--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
     <a href="https://alchemy.seafoodstudios.com" title="Sigma Alchemy">Sigma Alchemy</a>
     <a href="https://salmon.seafoodstudios.com" title="Salmon WebView">Salmon WebView</a>
     <a href="http://sfs.bz" title="SFS.BZ Free Subdomains">SFS.BZ Free Subdomains</a>
-    <a href="https://algae.seafoodstudios.com" title="ALGAE Currency">ALGAE Currency</a>
+    <a href="https://algae.seafoodstudios.com" title="ALGAE Transferer">ALGAE Transferer</a>
+    <a href="https://algaemine.seafoodstudios.com" title="ALGAE Miner">ALGAE Miner</a>
   </div>
   <div class="link-container">
     <a href="https://github.com/SeafoodStudios" title="GitHub">GitHub</a>
