--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <style>
     body {
       font-family: 'Orbitron', sans-serif;
-      background: linear-gradient(135deg, #2a2a72, #009ffd);
-      color: white;
+      background: #121212;
+      color: #e0e0e0;
       margin: 0;
       padding: 0;
       display: flex;
@@ -19,50 +19,49 @@
       text-align: center;
     }
     h1 {
-      font-size: 4em;
+      font-size: 3.5em;
       margin-top: 50px;
-      color: #00f2ff;
+      color: #81a1c1;
       text-transform: uppercase;
       letter-spacing: 5px;
-      text-shadow: 0 0 20px rgba(0, 242, 255, 0.7);
+      text-shadow: 0 0 10px rgba(129, 161, 193, 0.3);
     }
     p {
-      font-size: 1.3em;
+      font-size: 1.2em;
       margin: 20px 0;
-      color: rgba(255, 255, 255, 0.8);
-      letter-spacing: 2px;
+      color: rgba(240, 240, 240, 0.8);
+      letter-spacing: 1px;
       line-height: 1.5;
     }
     a {
       display: inline-block;
       margin: 10px 0;
       padding: 15px 25px;
-      background-color: #00f2ff;
-      color: white;
+      background-color: #3a5c75;
+      color: #e0e0e0;
       text-decoration: none;
-      font-size: 1.2em;
+      font-size: 1.1em;
       border-radius: 25px;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      transition: transform 0.2s ease, background-color 0.2s ease;
       text-transform: uppercase;
       letter-spacing: 2px;
-      box-shadow: 0 0 10px rgba(0, 242, 255, 0.8);
     }
     a:hover {
       transform: translateY(-5px);
-      box-shadow: 0 0 20px rgba(0, 242, 255, 1);
+      background-color: #5c7a91;
     }
     a:active {
       transform: translateY(0);
-      box-shadow: 0 0 10px rgba(0, 242, 255, 0.6);
+      background-color: #4b667d;
     }
     .link-container {
-      margin-top: 50px;
+      margin-top: 30px;
     }
     footer {
       position: absolute;
       bottom: 10px;
       width: 100%;
-      color: rgba(255, 255, 255, 0.6);
+      color: rgba(240, 240, 240, 0.6);
       font-size: 1em;
     }
     footer p {
