--- a/index.html
+++ b/index.html
@@ -20,12 +20,16 @@
       box-sizing: border-box;
     }
     h1 {
-      font-size: 3.5em;
-      margin-top: 20px;
-      color: #00ffcc; /* Neon cyan */
+      font-size: 4em;
+      margin-top: 0; /* Removed top margin completely */
+      color: #ff007f; /* Neon pink */
       text-transform: uppercase;
-      letter-spacing: 5px;
-      text-shadow: 0 0 15px rgba(0, 255, 204, 0.6), 0 0 30px rgba(0, 255, 204, 0.4);
+      letter-spacing: 6px;
+      text-shadow: 
+        0 0 15px rgba(255, 0, 127, 0.7), 
+        0 0 30px rgba(255, 0, 127, 0.7), 
+        0 0 45px rgba(255, 0, 127, 0.7), 
+        0 0 60px rgba(255, 0, 127, 0.7);
     }
     p {
       font-size: 1.2em;
@@ -33,30 +37,31 @@
       color: rgba(240, 240, 240, 0.85);
       letter-spacing: 1px;
       line-height: 1.5;
+      text-shadow: 0 0 10px rgba(255, 255, 255, 0.3), 0 0 15px rgba(255, 255, 255, 0.2);
     }
     a {
       display: inline-block;
       margin: 10px 0;
-      padding: 15px 25px;
-      background-color: #3a5c75;
+      padding: 18px 28px;
+      background-color: #007fff; /* Neon blue */
       color: #e0e0e0;
       text-decoration: none;
-      font-size: 1.1em;
+      font-size: 1.2em;
       border-radius: 25px;
-      transition: transform 0.2s ease, background-color 0.2s ease, box-shadow 0.2s ease;
+      transition: transform 0.2s ease, background-color 0.2s ease, box-shadow 0.3s ease;
       text-transform: uppercase;
       letter-spacing: 2px;
-      box-shadow: 0 0 10px rgba(78, 119, 180, 0.7);
+      box-shadow: 0 0 20px rgba(0, 127, 255, 0.7), 0 0 30px rgba(0, 127, 255, 0.7);
     }
     a:hover {
       transform: translateY(-5px);
-      background-color: #5c7a91;
-      box-shadow: 0 0 15px rgba(78, 119, 180, 0.9);
+      background-color: #00b3ff;
+      box-shadow: 0 0 30px rgba(0, 191, 255, 1), 0 0 60px rgba(0, 191, 255, 0.7);
     }
     a:active {
       transform: translateY(0);
-      background-color: #4b667d;
-      box-shadow: 0 0 10px rgba(78, 119, 180, 0.6);
+      background-color: #005c99;
+      box-shadow: 0 0 20px rgba(0, 127, 255, 0.6);
     }
     .link-container {
       margin-top: 30px;
@@ -71,17 +76,18 @@
     footer p {
       margin: 0;
       letter-spacing: 1px;
+      text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
     }
     @media (max-width: 768px) {
       h1 {
-        font-size: 2.5em;
+        font-size: 2.8em;
       }
       p {
         font-size: 1.1em;
       }
       a {
         font-size: 1em;
-        padding: 12px 20px;
+        padding: 15px 25px;
       }
     }
   </style>
