--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <style>
     body {
       font-family: 'Orbitron', sans-serif;
-      background: #121212;
-      color: #e0e0e0;
+      background: #0e0e0e; /* Dark background */
+      color: #e0e0e0; /* Light text */
       margin: 0;
       padding: 0 20px;
       display: flex;
@@ -22,22 +22,22 @@
     h1 {
       font-size: 4em;
       margin-top: 0; /* Removed top margin completely */
-      color: #ff007f; /* Neon pink */
+      color: #ff00ff; /* Neon purple */
       text-transform: uppercase;
       letter-spacing: 6px;
       text-shadow: 
-        0 0 15px rgba(255, 0, 127, 0.7), 
-        0 0 30px rgba(255, 0, 127, 0.7), 
-        0 0 45px rgba(255, 0, 127, 0.7), 
-        0 0 60px rgba(255, 0, 127, 0.7);
+        0 0 20px rgba(255, 0, 255, 0.9),
+        0 0 40px rgba(255, 0, 255, 0.8), 
+        0 0 60px rgba(255, 0, 255, 0.7),
+        0 0 80px rgba(255, 0, 255, 0.6); /* Strong neon purple glow */
     }
     p {
       font-size: 1.2em;
       margin: 20px 0;
-      color: rgba(240, 240, 240, 0.85);
+      color: rgba(240, 240, 240, 0.85); /* Soft white text */
       letter-spacing: 1px;
       line-height: 1.5;
-      text-shadow: 0 0 10px rgba(255, 255, 255, 0.3), 0 0 15px rgba(255, 255, 255, 0.2);
+      text-shadow: 0 0 10px rgba(255, 255, 255, 0.3), 0 0 20px rgba(255, 255, 255, 0.2);
     }
     a {
       display: inline-block;
@@ -48,15 +48,15 @@
       text-decoration: none;
       font-size: 1.2em;
       border-radius: 25px;
-      transition: transform 0.2s ease, background-color 0.2s ease, box-shadow 0.3s ease;
+      transition: transform 0.2s ease, background-color 0.3s ease, box-shadow 0.3s ease;
       text-transform: uppercase;
       letter-spacing: 2px;
-      box-shadow: 0 0 20px rgba(0, 127, 255, 0.7), 0 0 30px rgba(0, 127, 255, 0.7);
+      box-shadow: 0 0 20px rgba(0, 127, 255, 0.8), 0 0 30px rgba(0, 127, 255, 0.6); /* Neon blue glow */
     }
     a:hover {
       transform: translateY(-5px);
       background-color: #00b3ff;
-      box-shadow: 0 0 30px rgba(0, 191, 255, 1), 0 0 60px rgba(0, 191, 255, 0.7);
+      box-shadow: 0 0 40px rgba(0, 191, 255, 1), 0 0 80px rgba(0, 191, 255, 0.7); /* Brighter neon effect */
     }
     a:active {
       transform: translateY(0);
@@ -70,13 +70,13 @@
       position: absolute;
       bottom: 10px;
       width: 100%;
-      color: rgba(240, 240, 240, 0.6);
+      color: rgba(240, 240, 240, 0.5);
       font-size: 1em;
     }
     footer p {
       margin: 0;
       letter-spacing: 1px;
-      text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+      text-shadow: 0 0 5px rgba(255, 255, 255, 0.4); /* Soft glow for footer */
     }
     @media (max-width: 768px) {
       h1 {
