--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <body>
   <div>
     <h1>SeafoodStudios</h1>
-    <p>Welcome to SeafoodStudios Games! Explore our interactive and fun experiences below:</p>
+    <p>Welcome to SeafoodStudios!</p>
     <div class="link-container">
       <a href="https://cloudroom.seafoodstudios.com" title="Cloudroom">Cloudroom</a>
       <a href="https://lightswitch.seafoodstudios.com" title="Light Switch Simulator">Light Switch Simulator</a>
