--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>SeafoodStudios</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     /* Basic reset */
     * {
@@ -14,7 +14,7 @@
     }
 
     body {
-      font-family: 'Roboto', sans-serif; /* Body text font */
+      font-family: 'Poppins', sans-serif; /* Use Poppins for body text for better readability */
       background: #121212; /* Dark background */
       color: #e0e0e0; /* Light text */
       display: flex;
@@ -27,11 +27,11 @@
     }
 
     h1 {
-      font-family: 'Orbitron', sans-serif; /* Headings font */
-      font-size: 8vw; /* Font size adjusts with viewport width */
+      font-family: 'Orbitron', sans-serif; /* Orbitron for headings */
+      font-size: 6vw; /* Font size adjusts with viewport width */
       color: #bb00ff; /* Softer neon purple */
       text-transform: uppercase;
-      letter-spacing: 6px;
+      letter-spacing: 4px;
       text-shadow: 
         0 0 10px rgba(187, 0, 255, 0.6),
         0 0 20px rgba(187, 0, 255, 0.5), 
