--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>SeafoodStudios</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     /* Basic reset */
     * {
@@ -14,7 +14,7 @@
     }
 
     body {
-      font-family: 'Poppins', sans-serif; /* Use Poppins for body text for better readability */
+      font-family: 'Poppins', sans-serif; /* Body text font */
       background: #121212; /* Dark background */
       color: #e0e0e0; /* Light text */
       display: flex;
@@ -27,7 +27,7 @@
     }
 
     h1 {
-      font-family: 'Orbitron', sans-serif; /* Orbitron for headings */
+      font-family: 'Raleway', sans-serif; /* Changed font for the title */
       font-size: 6vw; /* Font size adjusts with viewport width */
       color: #bb00ff; /* Softer neon purple */
       text-transform: uppercase;
