--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <style>
     body {
       font-family: 'Orbitron', sans-serif;
-      background: #121212; /* Dark background */
-      color: #e0e0e0; /* Light text */
+      background: #121212;
+      color: #e0e0e0;
       margin: 0;
-      padding: 0 20px;
+      padding: 0;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -20,30 +20,30 @@
       box-sizing: border-box;
     }
     h1 {
-      font-size: 4em;
-      margin-top: 0; /* Removed top margin completely */
-      color: #bb00ff; /* Softer neon purple */
+      font-size: 10vw;
+      margin-top: 0;
+      color: #bb00ff;
       text-transform: uppercase;
       letter-spacing: 6px;
       text-shadow: 
         0 0 10px rgba(187, 0, 255, 0.6),
         0 0 20px rgba(187, 0, 255, 0.5), 
         0 0 30px rgba(187, 0, 255, 0.4),
-        0 0 40px rgba(187, 0, 255, 0.3); /* Softer neon purple glow */
+        0 0 40px rgba(187, 0, 255, 0.3);
     }
     p {
-      font-size: 1.2em;
+      font-size: 2.5vw;
       margin: 20px 0;
-      color: rgba(240, 240, 240, 0.85); /* Soft white text */
+      color: rgba(240, 240, 240, 0.85);
       letter-spacing: 1px;
       line-height: 1.5;
-      text-shadow: 0 0 5px rgba(255, 255, 255, 0.2), 0 0 10px rgba(255, 255, 255, 0.1); /* Subtle white glow */
+      text-shadow: 0 0 5px rgba(255, 255, 255, 0.2), 0 0 10px rgba(255, 255, 255, 0.1);
     }
     a {
       display: inline-block;
       margin: 10px 0;
       padding: 18px 28px;
-      background-color: #0068a1; /* Muted neon blue */
+      background-color: #0068a1;
       color: #e0e0e0;
       text-decoration: none;
       font-size: 1.2em;
@@ -51,12 +51,12 @@
       transition: transform 0.2s ease, background-color 0.3s ease, box-shadow 0.3s ease;
       text-transform: uppercase;
       letter-spacing: 2px;
-      box-shadow: 0 0 15px rgba(0, 104, 161, 0.6), 0 0 25px rgba(0, 104, 161, 0.5); /* Softer neon blue glow */
+      box-shadow: 0 0 15px rgba(0, 104, 161, 0.6), 0 0 25px rgba(0, 104, 161, 0.5);
     }
     a:hover {
       transform: translateY(-5px);
       background-color: #0094c6;
-      box-shadow: 0 0 20px rgba(0, 148, 198, 0.8), 0 0 40px rgba(0, 148, 198, 0.6); /* Subdued hover effect */
+      box-shadow: 0 0 20px rgba(0, 148, 198, 0.8), 0 0 40px rgba(0, 148, 198, 0.6);
     }
     a:active {
       transform: translateY(0);
@@ -76,7 +76,7 @@
     footer p {
       margin: 0;
       letter-spacing: 1px;
-      text-shadow: 0 0 5px rgba(255, 255, 255, 0.3); /* Soft footer glow */
+      text-shadow: 0 0 5px rgba(255, 255, 255, 0.3);
     }
     @media (max-width: 768px) {
       h1 {
