--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       box-sizing: border-box;
     }
     h1 {
-      font-size: 10vw;
+      font-size: 6vw;
       margin-top: 0;
       color: #bb00ff;
       text-transform: uppercase;
@@ -32,7 +32,7 @@
         0 0 40px rgba(187, 0, 255, 0.3);
     }
     p {
-      font-size: 2.5vw;
+      font-size: 3vw;
       margin: 20px 0;
       color: rgba(240, 240, 240, 0.85);
       letter-spacing: 1px;
@@ -46,7 +46,7 @@
       background-color: #0068a1;
       color: #e0e0e0;
       text-decoration: none;
-      font-size: 1.2em;
+      font-size: 1.2rem;
       border-radius: 25px;
       transition: transform 0.2s ease, background-color 0.3s ease, box-shadow 0.3s ease;
       text-transform: uppercase;
@@ -71,7 +71,7 @@
       bottom: 10px;
       width: 100%;
       color: rgba(240, 240, 240, 0.5);
-      font-size: 1em;
+      font-size: 1rem;
     }
     footer p {
       margin: 0;
@@ -80,14 +80,26 @@
     }
     @media (max-width: 768px) {
       h1 {
-        font-size: 2.8em;
+        font-size: 8vw;
       }
       p {
-        font-size: 1.1em;
+        font-size: 4vw;
       }
       a {
-        font-size: 1em;
+        font-size: 1rem;
         padding: 15px 25px;
+      }
+    }
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 10vw;
+      }
+      p {
+        font-size: 5vw;
+      }
+      a {
+        font-size: 0.9rem;
+        padding: 12px 20px;
       }
     }
   </style>
