--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
       margin: 0;
       padding: 0;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      overflow: hidden;
+      height: 100%;
+      min-height: 100vh;
+      overflow-y: auto;
       text-align: center;
       box-sizing: border-box;
     }
@@ -32,7 +34,7 @@
         0 0 40px rgba(187, 0, 255, 0.3);
     }
     p {
-      font-size: 3vw;
+      font-size: 3.5vw;
       margin: 20px 0;
       color: rgba(240, 240, 240, 0.85);
       letter-spacing: 1px;
@@ -67,16 +69,14 @@
       margin-top: 30px;
     }
     footer {
-      position: absolute;
-      bottom: 10px;
-      width: 100%;
+      margin-top: auto;
+      font-size: 0.8rem;
       color: rgba(240, 240, 240, 0.5);
-      font-size: 1rem;
+      letter-spacing: 1px;
+      text-shadow: 0 0 5px rgba(255, 255, 255, 0.3);
     }
     footer p {
       margin: 0;
-      letter-spacing: 1px;
-      text-shadow: 0 0 5px rgba(255, 255, 255, 0.3);
     }
     @media (max-width: 768px) {
       h1 {
