--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>SeafoodStudios</title>
   <style>
     body {
-      font-family: 'Orbitron', sans-serif;
+      font-family: 'Poppins', sans-serif;
       background: #121212;
       color: #e0e0e0;
       margin: 0;
@@ -21,6 +21,7 @@
       text-align: center;
       box-sizing: border-box;
     }
+
     h1 {
       font-size: 6vw;
       margin-top: 0;
@@ -28,57 +29,65 @@
       text-transform: uppercase;
       letter-spacing: 6px;
       text-shadow: 
-        0 0 10px rgba(187, 0, 255, 0.6),
-        0 0 20px rgba(187, 0, 255, 0.5), 
-        0 0 30px rgba(187, 0, 255, 0.4),
-        0 0 40px rgba(187, 0, 255, 0.3);
+        0 0 15px rgba(187, 0, 255, 0.6),
+        0 0 25px rgba(187, 0, 255, 0.5), 
+        0 0 35px rgba(187, 0, 255, 0.4),
+        0 0 45px rgba(187, 0, 255, 0.3);
     }
+
     p {
       font-size: 3.5vw;
       margin: 20px 0;
       color: rgba(240, 240, 240, 0.85);
       letter-spacing: 1px;
       line-height: 1.5;
-      text-shadow: 0 0 5px rgba(255, 255, 255, 0.2), 0 0 10px rgba(255, 255, 255, 0.1);
+      text-shadow: 0 0 5px rgba(255, 255, 255, 0.3), 0 0 15px rgba(255, 255, 255, 0.2);
     }
+
     a {
       display: inline-block;
-      margin: 10px 0;
+      margin: 12px 0;
       padding: 18px 28px;
       background-color: #0068a1;
       color: #e0e0e0;
       text-decoration: none;
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       border-radius: 25px;
       transition: transform 0.2s ease, background-color 0.3s ease, box-shadow 0.3s ease;
       text-transform: uppercase;
-      letter-spacing: 2px;
+      letter-spacing: 1.5px;
       box-shadow: 0 0 15px rgba(0, 104, 161, 0.6), 0 0 25px rgba(0, 104, 161, 0.5);
     }
+
     a:hover {
-      transform: translateY(-5px);
+      transform: translateY(-6px);
       background-color: #0094c6;
-      box-shadow: 0 0 20px rgba(0, 148, 198, 0.8), 0 0 40px rgba(0, 148, 198, 0.6);
+      box-shadow: 0 0 30px rgba(0, 148, 198, 0.8), 0 0 50px rgba(0, 148, 198, 0.6);
     }
+
     a:active {
       transform: translateY(0);
       background-color: #004c75;
       box-shadow: 0 0 15px rgba(0, 104, 161, 0.5);
     }
+
     .link-container {
       margin-top: 30px;
       display: flex;
       flex-direction: column;
       align-items: center;
+      gap: 15px;
     }
+
     footer {
       margin-top: auto;
-      font-size: 0.8rem;
-      color: rgba(240, 240, 240, 0.5);
+      font-size: 0.9rem;
+      color: rgba(240, 240, 240, 0.6);
       letter-spacing: 1px;
       text-shadow: 0 0 5px rgba(255, 255, 255, 0.3);
       margin-bottom: 20px;
     }
+
     footer p {
       margin: 0;
     }
@@ -89,13 +98,14 @@
         font-size: 8vw;
       }
       p {
-        font-size: 4vw;
+        font-size: 4.5vw;
       }
       a {
         font-size: 1.1rem;
         padding: 16px 24px;
       }
     }
+
     @media (max-width: 768px) {
       h1 {
         font-size: 9vw;
@@ -108,6 +118,7 @@
         padding: 14px 22px;
       }
     }
+
     @media (max-width: 480px) {
       h1 {
         font-size: 12vw;
@@ -120,6 +131,7 @@
         padding: 12px 20px;
       }
     }
+
   </style>
 </head>
 <body>
@@ -135,7 +147,7 @@
       <a href="http://sfs.bz" title="SFS.BZ Free Subdomains">SFS.BZ Free Subdomains</a>
       <a href="https://algae.seafoodstudios.com" title="ALGAE Transferer">ALGAE Transferer</a>
       <a href="https://algaemine.seafoodstudios.com" title="ALGAE Miner">ALGAE Miner</a>
-      <a href="https://sushios" title="SushiOS">SushiOS</a>
+      <a href="https://sushios.seafoodstudios.com" title="SushiOS">SushiOS</a>
     </div>
     <div class="link-container">
       <a href="https://github.com/SeafoodStudios" title="GitHub">GitHub</a>
