--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
     .link-container {
       margin-top: 20px;
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 10px;
+      flex-wrap: wrap; /* Allow buttons to wrap to next line on smaller screens */
+      justify-content: center; /* Center buttons horizontally */
+      gap: 15px; /* Add space between buttons */
       font-family: 'Source Code Pro', monospace;
       width: 100%; /* Ensure links take full width */
-      max-width: 500px; /* Limit max width for readability */
+      max-width: 900px; /* Limit max width for readability */
     }
 
     a {
