--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
 
     footer {
       margin-top: auto;
-      font-size: 0.9rem;
+      font-size: 0.7rem; /* Smaller font size for copyright */
       color: rgba(240, 240, 240, 0.6);
       letter-spacing: 1px;
       text-shadow: 0 0 5px rgba(255, 255, 255, 0.3);
-      margin-bottom: 20px;
+      margin-bottom: 10px; /* Reduce the bottom margin */
     }
 
     footer p {
